# fractal-erosion

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  ErrorHandling.cpp  ErrorHandling.h  LICENSE  README.md  Shader.h  configure.sh  fractals_test  imgui.ini  main.cpp
res/shaders/: fragment.shader  vertex.shader
shaders/: fragment.shader
src/: CMakeLists.txt  CMakeRC.cmake  Camera.cpp  Camera.h  ColorHelper.cpp  ColorHelper.h  DiamondSquareFractal.cpp  DiamondSquareFractal.h  Display.cpp  Display.h  ErrorHandler.cpp  ErrorHandler.h  ErrorHandling.cpp  FractalResult.cpp  FractalResult.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Main.cpp  Material.cpp  Material.h  MaterialHelper.cpp  MaterialHelper.h  MathHelper.cpp  MathHelper.h  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h  (+9 more)
test/: CMakeLists.txt  MathHelperTests.cpp  MathHelperTests.h
